--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: -webkit-linear-gradient(to right, #24243e, #302b63, #678bd6);  Chrome 10-25, Safari 5.1-6 */
+  /* background: linear-gradient(to right, #020024, #090979, #00d4ff); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  /* background: linear-gradient(to right, #020024, #090979, #00d4ff); W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #172635;
+  
 }
 
 code {
